<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_01"
    tools:context=".TagInterface">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginBottom="675dp"
        android:background="@color/yellow_02"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="@id/toolbar2"
        app:layout_constraintStart_toStartOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/instruction_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="cursive"
        android:text="@string/second_instruction"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.123" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="630dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/yellow_02"
        android:fontFamily="cursive"
        android:text="@string/submit_button"
        android:textColor="@color/black"
        android:textColorHighlight="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_tag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="349dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="184dp"
        android:clickable="true"
        android:contentDescription="@string/add_tag_button"
        app:backgroundTint="@color/yellow_02"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        app:srcCompat="@android:drawable/ic_input_add" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="326dp"
        android:layout_height="213dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="350dp"
        app:chipSpacingHorizontal="32dp"
        app:layout_constraintBottom_toTopOf="@+id/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instruction_2"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_1"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_1"
            android:textSize="36sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="205dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_2"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_2"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="205dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_3"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_3"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="205dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_4"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_4"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="205dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_5"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_5"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="205dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_6"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_6"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="205dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_7"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_7"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="205dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_8"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_8"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="205dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/default_tag_9"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_tag_9"
            android:textSize="24sp"
            app:chipBackgroundColor="@color/yellow_02"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="205dp" />


    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>